<resources>
    <string name="app_name">Rental Car</string>
    <string name="created">Created by Rizki Ramadhan</string>
    <string name="title">Rental Car</string>
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account_sign_up">Dont have account? Sign Up</string>
    <string name="loading">Loading ...</string>
    <string name="sign_up">Sign Up</string>
    <string name="allready_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="name">Name</string>
    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">close drawer</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="lorem2">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="history">History</string>
    <string name="refresh">refresh</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="menu_car">Available Car</string>
    <string name="history_menu">History</string>
    <string name="sewa_mobil">Sewa Mobil</string>
    <string name="username2">Username</string>
    <string name="nama_mobil">Nama Mobil</string>
    <string name="idr_1000000_day">IDR. 1000000 / day</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="detail">Detail</string>
    <string name="tanggal_awal">tanggal awal</string>
    <string name="tanggal_akhir">tanggal akhir</string>
    <string name="failed">Failed to connect \ncheck your internet connection</string>
    <string name="no_history">Look like you don\'t have\n any history</string>
    <string name="detail_show">Show Detail</string>
    <string name="hide_detail">Hide detail</string>
    <string name="no_order">look like you don\'t have\n any order</string>
</resources>