<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/ic_baseline_directions_car_24"
            android:title="@string/menu_car" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/history_menu" />
    </group>

    <group android:id="@+id/group_menu">
        <item android:id="@+id/nav_logout"
            android:title="@string/logout" />
    </group>
</menu>