<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
<!--    tools:showIn="@layout/app_bar_main"-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/set_dark_bg"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/eighty"
            android:translationZ="8dp"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/the_dialog"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:translationZ="9dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="15dp">

            <ProgressBar
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:layout_marginStart="15dp"/>

        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/swl_main">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_no_order"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:visibility="gone"
                    android:alpha="0"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:src="@drawable/confused"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/tv_no_order"
                    android:visibility="gone"
                    android:alpha="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:layout_below="@id/img_no_order"
                    android:fontFamily="@font/josefinsans_medium"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text = "@string/no_order"/>

                <ImageView
                    android:layout_width="300dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:layout_height="300dp"
                    android:visibility="gone"
                    android:alpha="0"
                    android:src="@drawable/no_internet2"
                    android:id="@+id/img_no_internet"/>

                <TextView
                    android:id="@+id/tv_no_internet"
                    android:visibility="gone"
                    android:alpha="0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:layout_below="@id/img_no_internet"
                    android:fontFamily="@font/josefinsans_medium"
                    android:textColor="#41427c"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:text="@string/failed"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rv_home"/>

                <TextView
                    android:id="@+id/main_no_order"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_centerInParent="true"
                    android:text="@string/tanggal_akhir"/>

            </RelativeLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </RelativeLayout>

</RelativeLayout>